objects/Account_BU__c.object
<CustomObject>
	<description>Account/Business Unit record in Account Plan.</description>
	<fields>
		<fullName>AcctPlan_ParentPlan__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Parent Account Plan for the Account/BU record</description>
		<label>Account Plan</label>
		<referenceTo>Account_Plan__c</referenceTo>
		<relationshipLabel>Account/BU</relationshipLabel>
		<relationshipName>Account_BU</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Adobe_Account_Exec__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>The lead Account Executive for this account.</inlineHelpText>
		<label>Adobe Account Exec</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Account_BU</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Current_Products__c</fullName>
		<label>Current Products</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Green_Zone__c</fullName>
		<formula>TEXT(SFDC_Account__r.Green_Zone__c)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Only displayed if SFDC Account is selected and has a Green Zone.</inlineHelpText>
		<label>Green Zone</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Location__c</fullName>
		<label>Location</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Notes__c</fullName>
		<label>Notes</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Org_Chart_Link__c</fullName>
		<inlineHelpText>Enter link from the SharePoint Account Plan site</inlineHelpText>
		<label>Org Chart Link</label>
		<type>Url</type>
	</fields>
	<fields>
		<fullName>Overall_Status__c</fullName>
		<label>Overall Status</label>
		<picklist>
			<picklistValues>
				<fullName>Greenfield</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Contracting</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Dormant</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Expanding</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Strategic Relationship</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Other</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Overview_Info__c</fullName>
		<defaultValue>false</defaultValue>
		<description>True if the Account/BU record has any or all of the fields populated that display on the Account Plan Overview tab.</description>
		<label>Overview Info</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Revenue_Goal_Local__c</fullName>
		<inlineHelpText>Fill in the expected revenue goal for the current financial year, in the currency the customer will buy in.</inlineHelpText>
		<label>Revenue Goal (Local)</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Revenue_Goal__c</fullName>
		<inlineHelpText>Fill in the expected revenue goal in USD for the current financial year.</inlineHelpText>
		<label>Revenue Goal (USD)</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Roll_Up_Summary__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Roll Up Summary</label>
		<referenceTo>Roll_Up_Summary__c</referenceTo>
		<relationshipLabel>Account/BU</relationshipLabel>
		<relationshipName>Account_BU</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>SFDC_Account__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>Search for the correct customer account.</inlineHelpText>
		<label>SFDC Account</label>
		<referenceTo>Account</referenceTo>
		<relationshipLabel>Account/BU</relationshipLabel>
		<relationshipName>Account_BU</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Total_Consulting_ACV1__c</fullName>
		<formula>Roll_Up_Summary__r.Total_Consulting_ACV1__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Sum of Consulting ACV from the DR IDs on the Opportunities Tab for this Account/BU</inlineHelpText>
		<label>Total Consulting ACV</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Total_Multi_Year1__c</fullName>
		<formula>Roll_Up_Summary__r.Total_Multi_Year__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Sum of Total Multi-Year from the DR IDs on the Opportunities Tab for this Account/BU</inlineHelpText>
		<label>Total Multi Year</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Total_New_ASV1__c</fullName>
		<formula>Roll_Up_Summary__r.Total_New_ASV__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Sum of New ASV from the DR IDs on the Opportunities Tab for this Account/BU</inlineHelpText>
		<label>Total New ASV</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Total_Renewal_ASV1__c</fullName>
		<formula>Roll_Up_Summary__r.Total_Renewal_ASV__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Sum of Renewal ASV from the DR IDs on the Opportunities Tab for this Account/BU</inlineHelpText>
		<label>Total Renewal ASV</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Total_TSV1__c</fullName>
		<formula>Roll_Up_Summary__r.Total_TSV__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Sum of Total TSV from the DR IDs on the Opportunities Tab for this Account/BU</inlineHelpText>
		<label>Total TSV</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Type__c</fullName>
		<description>Account/BU Type</description>
		<label>Type</label>
		<picklist>
			<picklistValues>
				<fullName>1. Parent</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>2. Subsidiary</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>3. BU</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>4. Brand</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>5. Franchise</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>6. Group</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>7. Market</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>8. Network</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>9. Owned</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>10. Region</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<label>Account/BU</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Account/BU Name</label>
		<type>Text</type>
	</nameField>
	<namedFilters>
		<fullName>nf_01Ia0000002HmmfEAC_00N1400000BBcSREA1</fullName>
		<active>true</active>
		<errorMessage>Enter an Account/BU from this Account Plan</errorMessage>
		<field>Executive_Sponsorship_Meeting__c.AcctPlan_AcctBU_ESM__c</field>
		<filterItems>
			<field>Account_BU__c.AcctPlan_ParentPlan__c</field>
			<operation>equals</operation>
			<valueField>$Source.AcctPlan_ESM__c</valueField>
		</filterItems>
		<isOptional>false</isOptional>
		<name>Executive Sponsorship Meeting Note_Accou</name>
		<sourceObject>Executive_Sponsorship_Meeting__c</sourceObject>
	</namedFilters>
	<namedFilters>
		<fullName>nf_01Ie0000000DdCoEAK_00Ne00000010hQ8EAI</fullName>
		<active>true</active>
		<field>AcctPlan_Competition_Partners__c.Account_BU__c</field>
		<filterItems>
			<field>Account_BU__c.AcctPlan_ParentPlan__c</field>
			<operation>equals</operation>
			<valueField>$Source.Account_Plan__c</valueField>
		</filterItems>
		<isOptional>false</isOptional>
		<name>Account Plan Competition/Partners_Accoun</name>
		<sourceObject>AcctPlan_Competition_Partners__c</sourceObject>
	</namedFilters>
	<namedFilters>
		<fullName>nf_01Ie0000000DdCrEAK_00Ne00000011BJeEAM</fullName>
		<active>true</active>
		<errorMessage>Enter an Account/BU from this Account Plan</errorMessage>
		<field>AcctPlan_Opportunities__c.AcctPlan_AcctBU_Opportunity__c</field>
		<filterItems>
			<field>Account_BU__c.AcctPlan_ParentPlan__c</field>
			<operation>equals</operation>
			<valueField>$Source.AcctPlan_Opportunities__c</valueField>
		</filterItems>
		<isOptional>false</isOptional>
		<name>Account Plan Opportunities_Account/BU</name>
		<sourceObject>AcctPlan_Opportunities__c</sourceObject>
	</namedFilters>
	<namedFilters>
		<fullName>nf_01Ie0000000DdCvEAK_00Ne00000010hRZEAY</fullName>
		<active>true</active>
		<field>AcctPlan_White_Space__c.Account_BU__c</field>
		<filterItems>
			<field>Account_BU__c.AcctPlan_ParentPlan__c</field>
			<operation>equals</operation>
			<valueField>$Source.Account_Plan__c</valueField>
		</filterItems>
		<isOptional>false</isOptional>
		<name>Account Plan White Space_Account/BU</name>
		<sourceObject>AcctPlan_White_Space__c</sourceObject>
	</namedFilters>
	<namedFilters>
		<fullName>nf_01Ie0000000Dh4REAS_00Ne00000012HfEEAU</fullName>
		<active>true</active>
		<field>AcctPlan_Overview__c.Account_BU__c</field>
		<filterItems>
			<field>Account_BU__c.AcctPlan_ParentPlan__c</field>
			<operation>equals</operation>
			<valueField>$Source.AcctPlan_Overview__c</valueField>
		</filterItems>
		<isOptional>false</isOptional>
		<name>Account Plan Overview_Account/BU</name>
		<sourceObject>AcctPlan_Overview__c</sourceObject>
	</namedFilters>
	<namedFilters>
		<fullName>nf_01Ie0000000DhTbEAK_00Ne00000012HgHEAU</fullName>
		<active>true</active>
		<field>AcctPlan_Dashboard__c.Account_BU__c</field>
		<filterItems>
			<field>Account_BU__c.AcctPlan_ParentPlan__c</field>
			<operation>equals</operation>
			<valueField>$Source.Account_Plan__c</valueField>
		</filterItems>
		<isOptional>false</isOptional>
		<name>Account Plan Dashboard_Account/BU</name>
		<sourceObject>AcctPlan_Dashboard__c</sourceObject>
	</namedFilters>
	<namedFilters>
		<fullName>nf_01If00000000oVyEAI_00Nf0000000oWI8EAM</fullName>
		<active>true</active>
		<errorMessage>Enter an Account/BU from this Account Plan</errorMessage>
		<field>AcctPlan_Relationships__c.AcctPlan_AcctBU_Relationship__c</field>
		<filterItems>
			<field>Account_BU__c.AcctPlan_ParentPlan__c</field>
			<operation>equals</operation>
			<valueField>$Source.AcctPlan_Relationship__c</valueField>
		</filterItems>
		<infoMessage>Search for Account/BU entered on the Account/BU Tab</infoMessage>
		<isOptional>false</isOptional>
		<name>Relationships_Account/BU</name>
		<sourceObject>AcctPlan_Relationships__c</sourceObject>
	</namedFilters>
	<namedFilters>
		<fullName>nf_01If00000000oW8EAI_00Nf0000000owM1EAI</fullName>
		<active>true</active>
		<errorMessage>Enter an Account/BU from this Account Plan</errorMessage>
		<field>AcctPlan_Activities__c.AcctPlan_AcctBU_Activities__c</field>
		<filterItems>
			<field>Account_BU__c.AcctPlan_ParentPlan__c</field>
			<operation>equals</operation>
			<valueField>$Source.AcctPlan_Activities__c</valueField>
		</filterItems>
		<isOptional>false</isOptional>
		<name>Account Plan Activities_Account/BU</name>
		<sourceObject>AcctPlan_Activities__c</sourceObject>
	</namedFilters>
	<pluralLabel>Account/BU</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>